# art_hug_07

./: .env.example  .gitignore  README.md  Taskfile.yml  ch_07_project.yaml  pyproject.toml
docs/: article7.md  article7_improved.md  article7_original.md
notebooks/: multimodal_ai_exploration.ipynb  multimodal_search.ipynb  tutorial.ipynb  vision_exploration.ipynb
src/: __init__.py  advanced_multimodal.py  article_examples.py  audio_classification.py  audio_processing.py  clip_demo_simple.py  config.py  diffusion_models.py  gradio_app.py  main.py  main_simple.py  modern_vision_transformers.py  multimodal_concepts_demo.py  multimodal_models.py  multimodal_search.py  multimodal_search_advanced.py  sglang_deployment.py  sglang_multimodal_pipeline.py  utils.py  vision_transformers.py
tests/: test_multimodal.py
